feat: 디자인 토큰 체계 구축 — primitive·semantic 3계층 + 다크모드
- Color 토큰: gray/blue/red/green/amber 5개 팔레트 (primitive → semantic 계층)
- Spacing: 4px 기반 9단계 스케일 (4~48px)
- Typography: heading 3단계 + body 2단계, font-family/weight/line-height
- Radius·Shadow: sm/md/lg 3단계
- CSS 변수 export: light.css + dark.css (data-theme 속성 전환)
- ThemeProvider + useTheme 훅: Context 기반 테마 모드 관리
- Storybook 시각화: Colors/Spacing/Typography 토큰 팔레트 페이지

토큰을 primitive → semantic → component 3계층으로 분리하여
디자인 변경 시 semantic 레이어만 수정하면 전체 컴포넌트에 반영되도록 설계.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.cjs"
     },
-    "./styles": "./dist/style.css"
+    "./styles": "./dist/design-system.css"
   },
   "files": [
     "dist"
