--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@my/design-system",
   "version": "0.1.0",
   "type": "module",
+  "packageManager": "pnpm@8.6.2",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
