--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   ],
   "scripts": {
     "dev": "storybook dev -p 6006",
-    "build": "vite build",
+    "build": "LIB_BUILD=true vite build",
     "build:storybook": "storybook build",
     "lint": "eslint .",
     "format": "prettier --write .",
